# RayTracer

./: Dockerfile  Makefile  README.md  build.sh  main.cc  run.sh  vec.hh
include/: catch.hh  common.hh  constmath.hh  transform.hh  vec.hh
test/: CMakeLists.txt  SoundexTest.cc  TestTuple.cc  Test_common.cc  Test_transform.cc  Test_tuple.cc
